--- a/application/addd.html
+++ b/application/addd.html
@@ -5,19 +5,16 @@
         <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Edit movie</h3>
+                    <h3 class="box-title">Add movies</h3>
                 </div>
                 <form role="form" method="post" enctype="multipart/form-data">
                     <div class="box-body">
-                            {% for msg in get_flashed_messages(category_filter=["err"]) %}
-                            <p class="tag_add-box-msg" style="color:red">{{ msg }}</p>
-                            {% endfor %}
                             {% for msg in get_flashed_messages(category_filter=["ok"]) %}
                             <p class="tag_add-box-msg" style="color:green">{{ msg }}</p>
                             {% endfor %}
                         <div class="form-group">
                             <label for="input_title">{{ form.title.label }}</label>
-                            {{ form.title(value=movie.title) }}
+                            {{ form.title }}
                             {% for err in form.title.errors %}
                             <div class="col-me-12">
                                 <font style="color:red">{{ err }}</font>
@@ -38,7 +35,7 @@
                         </div>
                         <div class="form-group">
                             <label for="input_info">{{ form.info.label }}</label>
-                            {{ form.info(value=movie.info) }}
+                            {{ form.info }}
                             {% for err in form.info.errors %}
                             <div class="col-me-12">
                                 <font style="color:red">{{ err }}</font>
@@ -49,7 +46,7 @@
 
                         <div class="form-group">
                             <label for="input_tag_id">{{ form.tag_id.label}}</label>
-                            {{ form.tag_id(value=movie.tag_id) }}
+                            {{ form.tag_id }}
                             {% for err in form.tag_id.errors %}
                             <div class="col-me-12">
                                 <font style="color:red">{{ err }}</font>
@@ -58,7 +55,7 @@
                         </div>
                         <div class="form-group">
                             <label for="input_area">{{ form.area.label }}</label>
-                            {{ form.area(value=movie.area) }}
+                            {{ form.area }}
                             {% for err in form.area.errors %}
                             <div class="col-me-12">
                                 <font style="color:red">{{ err }}</font>
@@ -67,7 +64,7 @@
                         </div>
                         <div class="form-group">
                             <label for="input_length">{{ form.length.label }}</label>
-                            {{ form.length(value=movie.length) }}
+                            {{ form.length }}
                             {% for err in form.length.errors %}
                             <div class="col-me-12">
                                 <font style="color:red">{{ err }}</font>
@@ -76,7 +73,7 @@
                         </div>
                         <div class="form-group">
                             <label for="input_release_time">{{ form.release_time.label}}</label>
-                            {{ form.release_time(value=movie.release_time) }}
+                            {{ form.release_time }}
                             {% for err in form.release_time.errors %}
                             <div class="col-me-12">
                                 <font style="color:red">{{ err }}</font>
@@ -92,4 +89,44 @@
         </div>
     </div>
 </section>
-{% endblock %} 
+{% endblock %} {% block js %}
+<script src="{{ url_for('static', filename='jwplayer/jwplayer.js') }}"></script>
+<script type="text/javascript">
+    jwplayer.key = "P9VTqT/X6TSP4gi/hy1wy23BivBhjdzVjMeOaQ==";
+
+</script>
+<script type="text/javascript">
+    jwplayer("moviecontainer").setup({
+        flashplayer: "{{ url_for('static', filename='jwplayer/jwplayer.flash.swf') }}",
+        playlist: [{
+            file: "{{ url_for('static', filename='video/videoplayback.mp4') }}",
+            
+        }],
+        modes: [{
+            type: "html5"
+        }, {
+            type: "flash",
+            src: "{{ url_for('static', filename='jwplayer/jwplayer.flash.swf') }}"
+        }, {
+            type: "download"
+        }],
+        skin: {
+            name: "vapor"
+        },
+        "playlist.position": "left",
+        "playlist.size": 200,
+        height: 250,
+        width: 387,
+    });
+
+</script>
+<script>
+    $(document).ready(function () {
+        $('#input_release_time').datepicker({
+            autoclose: true,
+            format: 'yyyy-mm-dd',
+            
+        });
+    });
+
+</script> {% endblock %}
